--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: Egzaminy aktuarialne
+title: Notatki z modelowania
 author: Przemysław Kopycki
 
 # Force re-execution of notebooks on each build.
@@ -12,7 +12,7 @@ execute:
 # Define the name of the latex output file for PDF builds
 latex:
   latex_documents:
-    targetname: rachunek_prawdopodobienstwa_book.tex
+    targetname: notatki_z_modelowania.tex
 
 # Add a bibtex file so that we can create citations
 bibtex_bibfiles:
@@ -24,9 +24,9 @@ sphinx:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/pkr-pk/rp_book  # Online location of your book
+  url: https://github.com/pkr-pk/modelowanie_notatki  # Online location of your book
   path_to_book: docs  # Optional path to your book, relative to the repository root
-  branch: master  # Which branch of the repository should be used when creating links (optional)
+  branch: main  # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
