--- a/_toc.yml
+++ b/_toc.yml
@@ -15,3 +15,6 @@ parts:
   - caption: An Introduction to Statistical Learning withApplications in R
     chapters:
     - file: chapters/An_Introduction_to_Statistical_Learning_with_Applications_in_R/chapter_02
+  - caption: Actuarial Aspects of ERM for Insurance Companies
+    chapters:
+    - file: chapters/Actuarial_Aspects_of_ERM_for_Insurance_Companies/chapter_03
