--- a/_toc.yml
+++ b/_toc.yml
@@ -19,6 +19,7 @@ parts:
     chapters:
     - file: chapters/An_Introduction_to_Statistical_Learning_with_Applications_in_R/chapter_02
     - file: chapters/An_Introduction_to_Statistical_Learning_with_Applications_in_R/chapter_05
+    - file: chapters/An_Introduction_to_Statistical_Learning_with_Applications_in_R/chapter_07
     - file: chapters/An_Introduction_to_Statistical_Learning_with_Applications_in_R/chapter_08
   - caption: Statistical Foundations of Actuarial Learning and its Applications
     chapters:
