--- a/_toc.yml
+++ b/_toc.yml
@@ -25,6 +25,9 @@ parts:
   - caption: Statistical Foundations of Actuarial Learning and its Applications
     chapters:
     - file: chapters/Statistical_Foundations_of_Actuarial_Learning_and_its_Applications/chapter_04
+  - caption: Quantitative Risk Management Concepts Techniques and Tools
+    chapters:
+    - file: chapters/Quantitative_Risk_Management_Concepts_Techniques_and_Tools/chapter_05
   - caption: Actuarial Aspects of ERM for Insurance Companies
     chapters:
     - file: chapters/Actuarial_Aspects_of_ERM_for_Insurance_Companies/chapter_03
