--- a/_toc.yml
+++ b/_toc.yml
@@ -12,6 +12,7 @@ parts:
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_09
   - caption: Loss Models From Data to Decisions
     chapters:
+    - file: chapters/Loss_Models_From_Data_to_Decisions/chapter_14
     - file: chapters/Loss_Models_From_Data_to_Decisions/chapter_15
   - caption: Regression Modeling with Actuarial and Financial Applications
     chapters:
