--- a/_toc.yml
+++ b/_toc.yml
@@ -10,6 +10,9 @@ parts:
     chapters:
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_06
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_09
+  - caption: Effective Statistical Learning Methods for Actuaries II
+    chapters:
+    - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_II/chapter_04
   - caption: Loss Models From Data to Decisions
     chapters:
     - file: chapters/Loss_Models_From_Data_to_Decisions/chapter_14
