--- a/_toc.yml
+++ b/_toc.yml
@@ -9,6 +9,7 @@ parts:
   - caption: Effective Statistical Learning Methods for Actuaries I
     chapters:
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_06
+    - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_07
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_09
   - caption: Effective Statistical Learning Methods for Actuaries II
     chapters:
