--- a/_toc.yml
+++ b/_toc.yml
@@ -8,6 +8,7 @@ options:
 parts:
   - caption: Effective Statistical Learning Methods for Actuaries I
     chapters:
+    - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_01
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_04
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_06
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_07
