--- a/_toc.yml
+++ b/_toc.yml
@@ -10,6 +10,7 @@ parts:
     chapters:
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_01
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_02
+    - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_03
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_04
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_06
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_07
