--- a/_toc.yml
+++ b/_toc.yml
@@ -12,6 +12,7 @@ parts:
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_02
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_03
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_04
+    - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_05
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_06
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_07
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_09
