--- a/_toc.yml
+++ b/_toc.yml
@@ -16,6 +16,7 @@ parts:
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_06
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_07
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/chapter_09
+    - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_I/notatki
   - caption: Effective Statistical Learning Methods for Actuaries II
     chapters:
     - file: chapters/Effective_Statistical_Learning_Methods_for_Actuaries_II/chapter_03
