--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -54,7 +54,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
         with:
-          path: /_build/html
+          name: jupyter-book-html
+          path: _build/html
 
       # Deploy the book's HTML to GitHub Pages
       - name: Deploy to GitHub Pages
