--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
         with:
-          name: jupyter-book-html
+          name: deploy-book
           path: _build/html
 
       # Deploy the book's HTML to GitHub Pages
