--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -54,8 +54,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
         with:
-          name: deploy-book
-          path: _build/html
+          path: ./_build/html
 
       # Deploy the book's HTML to GitHub Pages
       - name: Deploy to GitHub Pages
